--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.2'
 
 services:
+
   api:
     build:
       context: .
@@ -11,4 +12,14 @@ services:
         source: ./
         target: /app
     ports:
-      - "8080:8080"
+      - "8081:8080"
+
+  db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: example
+
+  adminer:
+    image: adminer
+    ports:
+      - 8082:8080
