--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "request": "^2.85.0",
+    "sequelize": "^4.37.6",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
