--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "production": "node ./bin/www"
+    "production": "node ./bin/www",
+    "test": "jasmine"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -21,7 +22,11 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
     "jasmine": "^3.1.0",
-    "nodemon": "^1.17.2"
+    "node-pre-gyp": "^0.10.0",
+    "nodemon": "^1.17.2",
+    "sqlite3": "^4.0.0"
   }
 }
