--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jasmine"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
