:heavy_plus_sign: Added python to dockerfile dev :heavy_plus_sign:

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -5,7 +5,7 @@ MAINTAINER TripleParity
 RUN apk update && \
     apk upgrade
 
-RUN apk add docker
+RUN apk add --update python make g++ docker
 
 #RUN rc-update add docker boot
 
