--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-jwt": "^5.3.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "pg": "^7.4.1",
