--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.15.5",
     "express-jwt": "^5.3.1",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.2.1",
     "morgan": "~1.9.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
