:construction: Development pause as priorities shift temporarily

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - type: bind
         source: ./
         target: /app
+    environment:
+      - JWT_SECRET=changeme
     ports:
       - 8080:8080
 
