--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,27 +3,19 @@ version: '3.2'
 services:
 
   api:
-    build:
-      context: .
-      dockerfile: Dockerfile-dev
+    image: tripleparity/docks-api
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - type: bind
-        source: ./
-        target: /app
     environment:
       - JWT_SECRET=changeme
+      - DOCKS_DB_ADDRESS=db
+      - POSTGRES_PASSWORD=example
     ports:
       - 8080:8080
+    depends_on:
+      - db
 
   db:
     image: postgres
     environment:
       POSTGRES_PASSWORD: example
-    ports:
-      - 5432:5432
-
-  adminer:
-    image: adminer
-    ports:
-      - 8082:8080
