Integration test the API
docks.apib contains the API Blueprint standard document.
It serves as reference for the end users.

To test we build the docks-api image and start it and the db
with docker-compose. jest then tests the API and we stop the
running containers.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
+dist: trusty
+
+sudo: required
+
+services:
+  - docker
+
 language: node_js
+
 node_js:
    - node
-dist: trusty
 
 cache:
     npm: true
@@ -13,6 +20,7 @@ before_script:
 
 script:
    - npm test
+   - ./integration-test.sh
 
 notifications:
     on_failure: change
