--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,16 @@ cache:
         - node_modules
 
 before_script:
-  - npm install --silent
-
+  - npm install -g nyc
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
-   - npm test
+  - nyc --reporter=lcov npm test
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 notifications:
     on_failure: change
-
-on_success: change
+    on_success: change
