Fix eslint errors and format to use 2 spaces of indentation

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "google"
   ],
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "indent": ["error", 2]
   },
   "parserOptions": {
     "ecmaVersion": 8
