--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.2'
 services:
 
   api:
-    image: tripleparity/docks-api
+    image: tripleparity/docks-api:latest
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
@@ -16,6 +16,9 @@ services:
       - 8080:8080
     depends_on:
       - db
+    deploy:
+      placement:
+        constraints: [node.role == manager]
 
   db:
     image: postgres
