--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jest": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^2.0.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
