--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - DOCKS_DB_ADDRESS=db
       - POSTGRES_PASSWORD=example
     ports:
-      - 8080:8080
+      - '8080:8080'
     depends_on:
       - db
     deploy:
@@ -22,5 +22,12 @@ services:
 
   db:
     image: postgres
+    volumes:
+      - type: volume
+        source: docks_data
+        target: /var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=example
+
+volumes:
+  docks_data:
