--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.85.0",
     "sequelize": "^4.37.6",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
