--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.85.0",
-    "sequelize": "^4.37.6",
+    "sequelize": "^4.38.1",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "jest": "^23.1.0",
     "node-pre-gyp": "^0.10.0",
     "nodemon": "^1.17.2",
+    "sequelize-cli": "^4.1.1",
     "sqlite3": "^4.0.0"
   }
 }
