--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.85.0",
     "sequelize": "^4.38.1",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "sequelize-cli": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -35,7 +36,6 @@
     "jest": "^23.1.0",
     "node-pre-gyp": "^0.10.0",
     "nodemon": "^1.17.2",
-    "sequelize-cli": "^4.1.1",
     "sqlite3": "^4.0.0"
   }
 }
