--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "morgan": "~1.9.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
+    "qrcode": "^1.2.2",
     "request": "^2.85.0",
-    "speakeasy": "^2.0.0",
     "sequelize": "^4.38.1",
-    "sequelize-cli": "^4.1.1"
+    "sequelize-cli": "^4.1.1",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
