--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,7 @@
     "indent": ["error", 2]
   },
   "parserOptions": {
-    "ecmaVersion": 8,
-    "sourceType": "module"
+    "ecmaVersion": 8
   },
   "env": {
     "node": true,
