--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.2'
 services:
 
   api:
-    image: tripleparity/docks-api:branch-develop
+    image: tripleparity/docks-api:0.4.0
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
@@ -14,8 +14,6 @@ services:
       - POSTGRES_PASSWORD=example
     ports:
       - '8080:8080'
-    depends_on:
-      - db
     deploy:
       placement:
         constraints: [node.role == manager]
